<resources>
    <string name="app_name">TNPL Data</string>
    <string name="team_prompt">Choose a Team</string>

    <!--Profile activity-->


    <string name="surveyor_name">Enter surveyor name .</string>
    <string name="surveyor_date">Enter surveyor date .</string>
    <string name="location">Select location.</string>
    <string name="match_name">Select match name.</string>
    <string name="name">Enter your name.</string>
    <string name="gender">Select your gender.</string>
    <string name="age">Enter your age.</string>
    <string name="from_location">Enter where are you from.</string>
    <string name="phone_no"> Enter your phone number .</string>
    <string name="email">Enter your email. </string>
    <string name="fev_team">Select your fev. team .</string>
    <string name="profession">Selectyour profesion .</string>
    <string name="education">Select your education.</string>



    <string-array name="team_array">
        <item>Tuti Patriots </item>
        <item>Dindigul Dragons</item>
        <item>Lyca Kovai Kings </item>
        <item>Madurai Super Giants </item>
        <item>Ruby Kanchi Warriors</item>
        <item>VB Thiruvallur Veerans</item>
        <item>Karaikudi Kaalai</item>
        <item>Chepauk Super Gillies</item>
    </string-array>



    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>




    <array name="location">
        <item>MAC,Chennai</item>
        <item>NPR College,Dindigul</item>
        <item>ICL Ground,Tirunelveli</item>
    </array>

    <array name="match">
        <item>Chepauk vs Thoothukudi</item>
        <item>Tiruvallur vs Karaikudi</item>
        <item>Coimbatore vs Kancheepuram</item>
        <item>Dindigul vs Madurai</item>
        <item>Chepauk vs Karaikudi</item>
        <item>Tiruvallur vs Madurai</item>
        <item>Dindigul vs Kancheepuram</item>
        <item>Coimbatore vs Thoothukudi</item>
        <item>Dindigul vs Tiruvallur</item>
        <item>Madurai vs Coimbatore </item>
        <item>Karaikudi vs Thoothukudi </item>
        <item>Kancheepuram vs Chepauk </item>
        <item>Dindigul vs Thoothukudi</item>
        <item></item>

    </array>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="fav_team">
        <item>Chepauk</item>
        <item>Coimbatore</item>
        <item>Dindigul</item>
        <item>Karaikudi</item>
        <item>Kancheepuram</item>
        <item>Kancheepuram</item>
        <item>Madurai</item>
        <item>Tiruvallur</item>
        <item>Thoothukudi</item>
    </array>
    <array name="profession">
        <item>Business</item>
        <item>House wife</item>
        <item>Services</item>
        <item>Student</item>
        <item>Sport</item>
    </array>
    <array name="education">
        <item>Under Matric</item>
        <item>Matric</item>
        <item>Intermediate</item>
        <item>UG</item>
        <item>PG</item>

    </array>
</resources>
