<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/darker_gray"
    tools:context="fanzone.datacollection.MainActivity">

    <ScrollView
        android:layout_centerHorizontal="true"
        android:overScrollMode="never"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/status"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/surver_name"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:hint="@string/surveyor_name"
                android:text=""/>


            <EditText
                android:id="@+id/location"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_below="@+id/surver_name"
                android:drawableRight="@drawable/dropdownblue"
                android:background="@drawable/login_textbox"
                android:hint="@string/location"
                android:text=""/>

            <EditText
                android:id="@+id/match"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_below="@+id/location"
                android:drawableRight="@drawable/dropdownblue"
                android:background="@drawable/login_textbox"
                android:hint="@string/match_name"
                android:text=""/>

            <LinearLayout
                android:id="@+id/empty"
                android:layout_below="@+id/match"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="25dp"
                    android:background="@android:color/white"/>
            </LinearLayout>



            <EditText
                android:id="@+id/name"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_below="@+id/empty"
                android:background="@drawable/login_textbox"
                android:hint="@string/name"
                android:text=""/>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/name"
                android:weightSum="2">
            <EditText
                android:id="@+id/gender"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_weight="1"
                android:drawableRight="@drawable/dropdownblue"
                android:background="@drawable/login_textbox"
                android:hint="@string/gender"
                android:text=""/>

            <EditText
                android:id="@+id/age"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="number"
                android:scrollHorizontally="true"
                android:layout_weight="1"
                android:background="@drawable/login_textbox"
                android:hint="@string/age"
                android:text=""/>
            </LinearLayout>
            <EditText
                android:id="@+id/from_loc"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_below="@+id/linear"
                android:background="@drawable/login_textbox"
                android:hint="@string/from_location"
                android:text=""/>
            <EditText
                android:id="@+id/phone"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="phone"
                android:maxLength="10"
                android:scrollHorizontally="true"
                android:layout_below="@+id/from_loc"
                android:background="@drawable/login_textbox"
                android:hint="@string/phone_no"
                android:text=""/>

            <EditText
                android:id="@+id/email"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:scrollHorizontally="true"
                android:layout_below="@+id/phone"
                android:background="@drawable/login_textbox"
                android:hint="@string/email"
                android:text=""/>

            <EditText
                android:id="@+id/fev_team"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:drawableRight="@drawable/dropdownblue"
                android:layout_below="@+id/email"
                android:background="@drawable/login_textbox"
                android:hint="@string/fev_team"
                android:text=""/>

            <EditText
                android:id="@+id/profession"
                style="@style/CustomEditView"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_below="@+id/fev_team"
                android:drawableRight="@drawable/dropdownblue"
                android:background="@drawable/login_textbox"
                android:hint="@string/profession"
                android:text=""/>

            <EditText
                android:id="@+id/education"
                style="@style/CustomEditView"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_below="@+id/profession"
                android:drawableRight="@drawable/dropdownblue"
                android:background="@drawable/login_textbox"
                android:hint="@string/education"
                android:text=""/>

            <Button
                android:id="@+id/btn_save"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/education"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="20dp"
                android:text="Save"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:background="@drawable/custom_button"
                android:layout_width="150dp"
                android:layout_height="45dp" />

            <Button
                android:id="@+id/btn_list"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/education"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp"
                android:text="List"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:background="@drawable/custom_button"
                android:layout_width="150dp"
                android:layout_height="45dp" />
        </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
