<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.fantain.datacollection.NewPostActivity">

    <!-- <EditText
         android:id="@+id/field_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
         android:hint="Title"
         android:maxLines="1" />

     <EditText
         android:id="@+id/field_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/field_title"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="5dp"
         android:hint="Write your post..."
         android:inputType="textMultiLine"
         android:maxLines="10"
         android:scrollHorizontally="false" />-->




    <ScrollView
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/fab_submit_post"
        android:overScrollMode="never"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/status"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/surver_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:textSize="14sp"
                android:singleLine="true"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:inputType="textCapSentences"
                android:scrollHorizontally="true"
                android:hint="@string/surveyor_name"
                android:text=""/>


            <Spinner
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/surver_name"
                />

            <Spinner
                android:id="@+id/match"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/location"
                />

            <LinearLayout
                android:id="@+id/empty"
                android:layout_below="@+id/match"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="25dp"
                    android:background="@android:color/black"/>
            </LinearLayout>



            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:scrollHorizontally="true"
                android:layout_below="@+id/empty"
                android:hint="@string/name"
                android:text=""/>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/name"
                android:weightSum="2">
                <Spinner
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:inputType="number"
                    android:scrollHorizontally="true"
                    android:layout_weight="1"
                    android:hint="@string/age"
                    android:text=""/>
            </LinearLayout>
            <EditText
                android:id="@+id/from_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:scrollHorizontally="true"
                android:layout_below="@+id/linear"
                android:hint="@string/from_location"
                android:text=""/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="phone"
                android:maxLength="10"
                android:scrollHorizontally="true"
                android:layout_below="@+id/from_loc"
                android:hint="@string/phone_no"
                android:text=""/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:imeOptions="actionGo"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:scrollHorizontally="true"
                android:layout_below="@+id/phone"
                android:hint="@string/email"
                android:text=""/>

            <Spinner
                android:id="@+id/fev_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/email"
                />

            <Spinner
                android:id="@+id/profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/fev_team"
                />

            <Spinner
                android:id="@+id/education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/profession"
                />



            <TextView
                android:id="@+id/exxx"
                style="@style/CustomTextView"
                android:layout_below="@+id/education"
                android:singleLine="true"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_marginTop="10dp"
                android:text=""/>
        </RelativeLayout>
    </ScrollView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_navigation_check_24"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_view_as_list"/>

</RelativeLayout>
